<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.synovergetest.otcmobilestore.CustomerScreen">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_customers" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/app_bar"
        android:src="@drawable/ic_action_refresh"
        android:background="#000000"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_id"
        android:id="@+id/textView"
        android:layout_marginTop="243dp"
        android:layout_below="@+id/app_bar"
        android:layout_alignStart="@+id/app_bar"
        android:layout_marginStart="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_first_name"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_toStartOf="@+id/textView3"
        android:layout_marginEnd="189dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_last_name"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_post_code"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginStart="190dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_phone"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignEnd="@+id/app_bar"
        android:layout_marginEnd="30dp" />

</RelativeLayout>
